force-app/main/default/objects/L2_Data__c/L2_Data__c.object-meta.xml
<CustomObject>
    <label>L2 Data</label>
    <nameField>
        <label>L2 Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L2 Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>