force-app/main/default/objects/L2_Data__c/fields/Contact_l2__c.field-meta.xml
<CustomField>
    <fullName>Contact_l2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>L2 Data</relationshipLabel>
    <relationshipName>L2_Data</relationshipName>
    <type>Lookup</type>
</CustomField>