force-app/main/default/objects/L2_Data__c/fields/County_l2__c.field-meta.xml
<CustomField>
    <fullName>County_l2__c</fullName>
    <label>County</label>
    <length>250</length>
    <type>Text</type>
</CustomField>