force-app/main/default/objects/L2_Data__c/fields/Home_Owner_Renter_l2__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner_Renter_l2__c</fullName>
    <label>Home Owner/Renter</label>
    <length>250</length>
    <type>Text</type>
</CustomField>