force-app/main/default/objects/L2_Data__c/fields/Household_Primary_Language_l2__c.field-meta.xml
<CustomField>
    <fullName>Household_Primary_Language_l2__c</fullName>
    <label>Household Primary Language</label>
    <length>250</length>
    <type>Text</type>
</CustomField>