force-app/main/default/objects/L2_Data__c/fields/Inter_in_Exercise_Aerobic_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Inter_in_Exercise_Aerobic_in_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest in Exercise Aerobic in Household</description>
    <inlineHelpText>Interest in Exercise Aerobic in Household</inlineHelpText>
    <label>Inter. in Exercise Aerobic in Household</label>
    <type>Checkbox</type>
</CustomField>