force-app/main/default/objects/L2_Data__c/fields/Inter_in_Exercise_Walking_in_Househol__c.field-meta.xml
<CustomField>
    <fullName>Inter_in_Exercise_Walking_in_Househol__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest in Exercise Walking in Household</description>
    <inlineHelpText>Interest in Exercise Walking in Household</inlineHelpText>
    <label>Inter. in Exercise Walking in Household</label>
    <type>Checkbox</type>
</CustomField>