force-app/main/default/objects/L2_Data__c/fields/Interest_in_Exercise_Running_Jogging__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Exercise_Running_Jogging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest in Exercise Running Jogging in Household</description>
    <inlineHelpText>Interest in Exercise Running Jogging in Household</inlineHelpText>
    <label>Interest in Exercise Running Jogging</label>
    <type>Checkbox</type>
</CustomField>