force-app/main/default/objects/L2_Data__c/fields/Interest_in_Scuba_Diving_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Scuba_Diving_in_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest in Scuba Diving in Household</label>
    <type>Checkbox</type>
</CustomField>