force-app/main/default/objects/L2_Data__c/fields/LALVOTERID_l2__c.field-meta.xml
<CustomField>
    <fullName>LALVOTERID_l2__c</fullName>
    <label>LALVOTERID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>