force-app/main/default/objects/L2_Data__c/fields/Lead_L2__c.field-meta.xml
<CustomField>
    <fullName>Lead_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead L2</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>L2 Data</relationshipLabel>
    <relationshipName>L2_Data</relationshipName>
    <type>Lookup</type>
</CustomField>