force-app/main/default/objects/L2_Data__c/fields/Mailing_Addresses_State_l2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Addresses_State_l2__c</fullName>
    <label>Mailing Addresses State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>