force-app/main/default/objects/L2_Data__c/fields/Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule__c</fullName>
    <label>Matching Rule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>