force-app/main/default/objects/L2_Data__c/fields/Parties_Description_l2__c.field-meta.xml
<CustomField>
    <fullName>Parties_Description_l2__c</fullName>
    <label>Parties Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>