force-app/main/default/objects/L2_Data__c/fields/Residence_Address_Zip_l2__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address_Zip_l2__c</fullName>
    <label>Residence Address Zip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>