force-app/main/default/objects/L2_Data__c/fields/Residence_Addresses_City_l2__c.field-meta.xml
<CustomField>
    <fullName>Residence_Addresses_City_l2__c</fullName>
    <label>Residence Addresses City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>