force-app/main/default/objects/L2_Data__c/fields/State_File_ID_l2__c.field-meta.xml
<CustomField>
    <fullName>State_File_ID_l2__c</fullName>
    <label>State File ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>