force-app/main/default/objects/L2_Data__c/fields/State_House_District_l2__c.field-meta.xml
<CustomField>
    <fullName>State_House_District_l2__c</fullName>
    <label>State House District</label>
    <length>250</length>
    <type>Text</type>
</CustomField>