force-app/main/default/objects/L2_Data__c/fields/State_Senate_District_l2__c.field-meta.xml
<CustomField>
    <fullName>State_Senate_District_l2__c</fullName>
    <label>State Senate District</label>
    <length>250</length>
    <type>Text</type>
</CustomField>