force-app/main/default/objects/L2_Data__c/fields/US_Congressional_District_l2__c.field-meta.xml
<CustomField>
    <fullName>US_Congressional_District_l2__c</fullName>
    <label>US Congressional District</label>
    <length>250</length>
    <type>Text</type>
</CustomField>