force-app/main/default/objects/L2_Data__c/fields/Vote_Frequency_l2__c.field-meta.xml
<CustomField>
    <fullName>Vote_Frequency_l2__c</fullName>
    <label>Vote Frequency</label>
    <length>250</length>
    <type>Text</type>
</CustomField>