force-app/main/default/objects/L2_Data__c/fields/Voters_Age_l2__c.field-meta.xml
<CustomField>
    <fullName>Voters_Age_l2__c</fullName>
    <label>Voters Age</label>
    <length>250</length>
    <type>Text</type>
</CustomField>