force-app/main/default/objects/L2_Data__c/fields/Voters_Cell_Phone_l2__c.field-meta.xml
<CustomField>
    <fullName>Voters_Cell_Phone_l2__c</fullName>
    <label>Voters Cell Phone</label>
    <type>Phone</type>
</CustomField>