force-app/main/default/objects/L2_Data__c/fields/Voters_Email_l2__c.field-meta.xml
<CustomField>
    <fullName>Voters_Email_l2__c</fullName>
    <label>Voters Email</label>
    <type>Email</type>
</CustomField>