force-app/main/default/objects/L2_Data__c/fields/Voters_First_Name_l2__c.field-meta.xml
<CustomField>
    <fullName>Voters_First_Name_l2__c</fullName>
    <label>Voters First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>