force-app/main/default/objects/L2_Data__c/fields/Voters_Last_Name_l2__c.field-meta.xml
<CustomField>
    <fullName>Voters_Last_Name_l2__c</fullName>
    <label>Voters Last Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>