force-app/main/default/objects/L2_Data__c/fields/Voters_Phone_l2__c.field-meta.xml
<CustomField>
    <fullName>Voters_Phone_l2__c</fullName>
    <label>Voters Phone</label>
    <type>Phone</type>
</CustomField>