force-app/main/default/objects/L2_Data__c/fields/Voting_Performance_Even_General__c.field-meta.xml
<CustomField>
    <fullName>Voting_Performance_Even_General__c</fullName>
    <label>Voting Performance Even General</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>