force-app/main/default/objects/L2_Data__c/fields/Voting_Propensity_Primary__c.field-meta.xml
<CustomField>
    <fullName>Voting_Propensity_Primary__c</fullName>
    <formula>IF( Voting_Performance_Even_Primary__c &gt; 0.65, &quot;High&quot;,
IF( Voting_Performance_Even_Primary__c &gt; 0.45, &quot;Medium&quot;,
IF( Voting_Performance_Even_Primary__c &lt;= 0.45, &quot;Low&quot;, &quot;&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voting Propensity - Primary</label>
    <type>Text</type>
</CustomField>